<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/start_IMG_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_below="@id/start_welcome_title"
        android:layout_marginTop="@dimen/text_size"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/BTN_mode_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Buttons"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:backgroundTint="@color/text_color"
            android:textColor="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BTN_sensor_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sensors"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:backgroundTint="@color/text_color"
            android:textColor="@color/white"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/BTN_Leaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/leaderboard_BTN"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:backgroundTint="@color/text_color"
            android:textColor="@color/white"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:id="@+id/start_welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/welcome_title"
        android:textColor="@color/text_color"
        android:textSize="@dimen/welcome_text_size"
        android:textStyle="bold" />




</RelativeLayout>