<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_road"
    tools:context=".GameOverActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gameOver_LBL_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/gameOver_text_size"
        android:textStyle="bold"
        tools:text="Game Over!😭\n" />


    <LinearLayout
        android:id="@+id/highScore_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameOver_LBL_title"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/start_ET_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/text_size"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:hint="@string/please_enter_name"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:paddingBottom="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_BTN_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/text_color"
            android:textColor="@color/white"
            android:text="@string/send"
            android:textSize="@dimen/text_size"
            />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gameOver_BTN_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:text="@string/main_menu"
        android:backgroundTint="@color/text_color"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        />


</RelativeLayout>
